Fix header logo alignment. Add loaders on Search and Repo page.

--- a/src/common/header/index.css
+++ b/src/common/header/index.css
@@ -1,7 +1,7 @@
 .ui.inverted.menu.thunder {
     background-color: #262223;
     height: 60px;
-    justify-content: center;
+    justify-content: flex-start;
 }
 
 .ui.inverted.menu.global.header .menu.search {
